# ctd_carb_model

./: .gitignore  CHANGES.md  COLUMN_NAMES.md  README.md  pyproject.toml  run_all.py  run_predict.py
config/: model_config.yaml
ctd_carb_model/: __init__.py  compare.py  data.py  models.py  predict.py  report.py  selection.py  validation.py
ctd_carb_model/plotting/: __init__.py  labels.py  profiles.py  relationships.py  transects.py
notebooks/: step01_prepare_data.ipynb  step02_fit_and_inspect_models.ipynb  step02b_select_predictors_aicc.ipynb  step03_validate.ipynb  step04_compare_mlr_ann.ipynb  step05_diagnostics_and_report.ipynb  step06_generate_predicted_profiles.ipynb
tests/: test_model.py
