[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ctd-carb-model"
version = "0.1.0"
description = "Predict carbonate chemistry from CTD hydrography; compare MLR and ANN with leakage-safe validation. Reads the ctd_carb_merge master table."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prof. Mahu, Maurice Oti Edusei, and contributors" }]
dependencies = ["pandas>=2.2,<3.0", "numpy>=1.26,<2.5"]

[project.optional-dependencies]
ann = ["scikit-learn>=1.3"]
recompute = ["PyCO2SYS>=1.8"]
plots = ["matplotlib>=3.7", "scipy>=1.10"]
test = ["pytest>=8"]
all = ["scikit-learn>=1.3", "PyCO2SYS>=1.8", "matplotlib>=3.7", "scipy>=1.10", "pytest>=8", "pyarrow>=14"]

[tool.setuptools.packages.find]
include = ["ctd_carb_model*"]
exclude = ["tests*", "examples*", "outputs*", "notebooks*", "config*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
